# socrob_data_augmentation

./: .gitignore  CMakeLists.txt  README.md  data_augmentation.py  package.xml  utils.py
basic_data_augmentation/: generate_yolo_data.py  utils.py  visualize.py
config/: data_augmentation.yaml  yolo.yaml
doc/img/: graph-data-augmentation.odg  graph-filter.odg  polygonal-label.xcf
example_yolo_templates/: yolov3-€3-testing.cfg  yolov3-€3-training.cfg  €3.data
